Fixed Animaations on smaller-screens & Removed Scroll-bar due to it messing with element's alignment

--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ body {
   background: linear-gradient(to right, rgb(41, 41, 197), rgb(35, 156, 242));
   background-position: center;
   overscroll-behavior-y: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .home {
@@ -93,7 +98,7 @@ body {
   );
   justify-content: center;
   align-items: center;
-  width: 26%;
+  width: 20rem;
   padding-top: 2rem;
   z-index: 99;
   height: 100vh;
@@ -251,19 +256,6 @@ body {
   }
 }
 
-@media screen and (max-width: 891px) {
-  .menu {
-    visibility: visible;
-    position: static;
-  }
-
-  .nav-links,
-  .contact {
-    position: absolute;
-    visibility: hidden;
-  }
-}
-
 .products {
   height: 100vh;
   width: 100%;
@@ -315,22 +307,22 @@ body {
 }
 
 .first-product {
-  transform: translateX(-461px);
+  transform: translateX(-50vw);
   opacity: 0;
   transition: transform 0.8s ease, opacity 0.8s ease;
 }
 .second-product {
-  transform: translateX(461px);
+  transform: translateX(50vw);
   opacity: 0;
   transition: transform 0.8s ease, opacity 0.8s ease;
 }
 .third-product {
-  transform: translateX(-461px);
+  transform: translateX(-50vw);
   opacity: 0;
   transition: transform 0.8s ease, opacity 0.8s ease;
 }
 .our-img {
-  transform: translateX(461px);
+  transform: translateX(50vw);
   opacity: 0;
   transition: transform 0.8s ease, opacity 0.8s ease;
 }
@@ -339,6 +331,19 @@ body {
   opacity: 1;
   transform: translateX(0);
 }
+@media screen and (max-width: 891px) {
+  .menu {
+    visibility: visible;
+    position: static;
+  }
+
+  .nav-links,
+  .contact {
+    position: absolute;
+    visibility: hidden;
+  }
+}
+
 @media screen and (min-width: 892px) {
   .products {
     flex-direction: row;
@@ -354,7 +359,7 @@ body {
 
 .about {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
 }
 
 .about-container {
@@ -366,7 +371,8 @@ body {
 }
 
 .our-img {
-  height: 35vh;
+  height: auto;
+  width: 85vw;
   border-radius: 2rem;
   margin-top: 1rem;
 }
@@ -397,10 +403,15 @@ body {
   padding: 2rem;
   border-radius: 2rem;
   margin: 2vh 0;
-  max-width: 80vw;
+  max-width: 95vw;
 }
 
 .story-of-us p {
   color: #fff;
   text-align: left;
+}
+
+.copyright {
+  color: #fff;
+  text-align: center;
 }
